--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -106,7 +106,7 @@
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span>Sản Phẩm</span>
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <li class="dropdown-submenu">
                                     <a class="dropdown-item dropdown-toggle" href="#">Áo Nam</a>
                                     <ul class="dropdown-menu">
@@ -128,28 +128,7 @@
                                         <li><a class="dropdown-item" value="4" href="{!! URL::route('link-category', 4) !!}">Áo Len Nam</a></li>
                                     </ul>
                                 </li>
-                                <!-- <li class="dropdown-submenu">
-                                    <a class="dropdown-item dropdown-toggle" href="#">Quần Nam</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" value="5" href="{!! URL::route('link-category', 5) !!}">Quần Jean Nam</a></li>
-                                        <li><a class="dropdown-item" value="6" href="{!! URL::route('link-category', 6) !!}">Quần Kaki Nam</a></li>
-                                        <li><a class="dropdown-item" value="7" href="{!! URL::route('link-category', 7) !!}">Quần Vải Nam</a></li>
-                                        <li><a class="dropdown-item" value="8" href="{!! URL::route('link-category', 8) !!}">Quần Short Nam</a></li>
-                                    </ul>
-                                </li>
-                                <li><a class="dropdown-item" href="#">Giày Dép Nam</a></li>
-                                <li class="dropdown-submenu">
-                                    <a class="dropdown-item dropdown-toggle" href="#">Phụ Kiện</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" value="10" href="{!! URL::route('link-category', 10) !!}">Thắt Lưng Nam</a></li>
-                                        <li><a class="dropdown-item" value="11" href="{!! URL::route('link-category', 11) !!}">Ví Nam</a></li>
-                                        <li><a class="dropdown-item" value="9" href="{!! URL::route('link-category', 9) !!}">Mũ Nam</a></li>
-                                        <li><a class="dropdown-item" value="12" href="{!! URL::route('link-category', 12) !!}">Caravat Nam</a></li>
-                                        <li><a class="dropdown-item" href="#">Quần Lót Nam</a></li>
-                                        <li><a class="dropdown-item" href="#">Vớ Nam</a></li>
-                                    </ul>
-                                </li> -->
-                            </ul>
+                            </ul> -->
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink212" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
