--- a/views/shop/product/productDetail.ejs
+++ b/views/shop/product/productDetail.ejs
@@ -263,7 +263,7 @@
                             <span class="fa fa-star-o" data-rating="3"></span>
                             <span class="fa fa-star-o" data-rating="4"></span>
                             <span class="fa fa-star-o" data-rating="5"></span>
-                            <input type="hidden" name="whatever1" class="rating-value" value="4">
+                            <input type="hidden" name="whatever1" class="rating-value" value="<%-data[0].rating%>">
                         </div>
                     </div>
                 </div>
@@ -281,57 +281,59 @@
       <hr>
     </section>
     <% if (relativeShop != '') {%>
-    <div class="container clearfix">
-      <div class="khoi_chua_sp_lienquan clearfix" style="display: block;">
-          <h5 style="margin-left: 10px; margin-bottom: 20px; font-size: 30px;">Sản phẩm khác của shop</h5>
-        <div>
-            <a href="/shop/<%-shop.shop_name%>.<%-shop.id%>">Xem tất cả</a>
-        </div>
-          <div class="container" style="max-width: 973px;">
-            
-            <div class="blogSlider" id="shopProduct">
-                <div class="MS-content">
-                    <%relativeShop.forEach(item => {%>
-                    <div class="item">
-                         <div class="product-grid">
-                             <div class="product-image">
-                                 <a href="/detail/<%-item.name%>.<%-item.product_id%>">
-                                     <img class="pic-1" src="<%-item.cover%>">
-                                 </a>
-                                 <span class="product-new-label">Hot</span>
-                                 <!-- <span class="product-discount-label">50%</span> -->
-                            </div>
-                            <div class="related-product-rating">
-                                <div class="rating">
-                                    <div class="star-rating" style="display: flex;">
-                                       <span class="fa fa-star-o" data-rating="1"></span>
-                                       <span class="fa fa-star-o" data-rating="2"></span>
-                                       <span class="fa fa-star-o" data-rating="3"></span>
-                                       <span class="fa fa-star-o" data-rating="4"></span>
-                                       <span class="fa fa-star-o" data-rating="5"></span>
-                                       <input type="hidden" name="whatever1" class="rating-value" value="<%-item.rating%>">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="product-content">
-                                <h3 class="title"><a href="#"><%-item.name%></a></h3>
-                                <div class="price">
-                                     <%-VND(parseInt(item.max))%>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <%})%>
-                </div>
-                 <div class="MS-controls">
-                     <button class="MS-left"><i class="fa fa-chevron-left" aria-hidden="true"></i></button>
-                     <button class="MS-right"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
-                 </div>
+    <section class="shop-relative-product">
+        <div class="container clearfix">
+            <div class="khoi_chua_sp_lienquan clearfix" style="display: block;">
+                <h5 style="margin-left: 10px; margin-bottom: 20px; font-size: 30px;">Sản phẩm khác của shop</h5>
+              <div>
+                  <a href="/shop/<%-shop.shop_name%>.<%-shop.id%>">Xem tất cả</a>
+              </div>
+                <div class="container" style="max-width: 973px;">
+                  
+                  <div class="blogSlider" id="shopProduct">
+                      <div class="MS-content">
+                          <%relativeShop.forEach(item => {%>
+                          <div class="item">
+                               <div class="product-grid">
+                                   <div class="product-image">
+                                       <a href="/detail/<%-item.name%>.<%-item.product_id%>">
+                                           <img class="pic-1" src="<%-item.cover%>">
+                                       </a>
+                                       <span class="product-new-label">Hot</span>
+                                       <!-- <span class="product-discount-label">50%</span> -->
+                                  </div>
+                                  <div class="related-product-rating">
+                                      <div class="rating">
+                                          <div class="star-rating" style="display: flex;">
+                                             <span class="fa fa-star-o" data-rating="1"></span>
+                                             <span class="fa fa-star-o" data-rating="2"></span>
+                                             <span class="fa fa-star-o" data-rating="3"></span>
+                                             <span class="fa fa-star-o" data-rating="4"></span>
+                                             <span class="fa fa-star-o" data-rating="5"></span>
+                                             <input type="hidden" name="whatever1" class="rating-value" value="<%-item.rating%>">
+                                          </div>
+                                      </div>
+                                  </div>
+                                  <div class="product-content">
+                                      <h3 class="title"><a href="#"><%-item.name%></a></h3>
+                                      <div class="price">
+                                           <%-VND(parseInt(item.max))%>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                          <%})%>
+                      </div>
+                       <div class="MS-controls">
+                           <button class="MS-left"><i class="fa fa-chevron-left" aria-hidden="true"></i></button>
+                           <button class="MS-right"><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
+                       </div>
+                  </div>
+                   
+              </div>
             </div>
-             
-        </div>
-      </div>
-    </div>
+          </div>
+    </section>
     <%}%>
     <% if (productCate2 != '') {%>
         <div class="container clearfix">
