--- a/views/auth/user/user-changePassword.ejs
+++ b/views/auth/user/user-changePassword.ejs
@@ -28,13 +28,10 @@
             <div><a style="color: unset" href="/user/purchase">Quản lý đơn hàng</a></div>
          </div>
          <div class="user-item">
-            <div>Sổ địa chỉ</div>
+            <div><a style="color: unset" href="/user/recent">Sản phẩm đã xem</a></div>
          </div>
          <div class="user-item">
             <div>Nhận xét sản phẩm đã mua</div>
-         </div>
-         <div class="user-item">
-            <div>Sản phẩm mua sau</div>
          </div>
       </div>
       <form class="user-profile-container" method="POST">
