--- a/views/auth/user/user-purchase.ejs
+++ b/views/auth/user/user-purchase.ejs
@@ -28,13 +28,10 @@
         <div><a style="color: unset" href="/user/account/purchase">Quản lý đơn hàng</a></div>
     </div>
     <div class="user-item">
-        <div><a href="/user/recent">Sản phẩm đã xem</a></div>
+        <div><a style="color: unset" href="/user/recent">Sản phẩm đã xem</a></div>
     </div>
     <div class="user-item">
         <div>Nhận xét sản phẩm đã mua</div>
-    </div>
-    <div class="user-item">
-        <div>Sản phẩm mua sau</div>
     </div>
     </div>
     <div class="_3D9BVC">
