--- a/views/index.ejs
+++ b/views/index.ejs
@@ -271,13 +271,12 @@
  <div id="PageContainer" class="is-moved-by-drawer">
 	<section id="main-slider" style="padding-left: 15px;">
 		<div class="grid">
-			<div class="frontSlider" id="frontPage">
+			<div class="frontSlider" id="frontPage1">
 				<div class="MS-content">
 					<div class="item">
 						<div style="display: flex;">
 							<div class="slide-bg">
-								<img src="images/img/home.jpg" alt="Chào mừng bạn đến với Furniture">
-								<!-- <img src="https://theme.hstatic.net/1000187230/1000241027/14/main_slider_1.png?v=2476" alt="Chào mừng bạn đến với Furniture"> -->
+								<img src="images/img/home.jpg" alt="ĐẾN VỚI NỘI THẤT <h2>FURNITURE SHOP</h2>">
 							 </div>
 							 <div class="slide-content-outside">
 								<div class="wrapper">
@@ -285,15 +284,17 @@
 									  <div class="grid">
 										 <div class="grid__item large--six-twelfths push--large--six-twelfths text-right">
 											<div class="slide-content">
-											   <p class="desc small--hide">Chào mừng bạn đến với Furniture</p>
-											   <h2 class="title small--hide">
-												  NỘI THẤT FURNITURE
-											   </h2>
+											   <h3 class="desc small--hide">ĐẾN VỚI NỘI THẤT <strong class="strong-name">FURNITURE SHOP</strong></h3>
+											   <h3 class="title small--hide" style="margin-right: 150px;">
+												GIÁ CẢ CẠNH TRANH
+											 	</h3>
+												<h3 class="title small--hide">
+												SĂN SALE CỰC THÍCH
+												</h3>
 											   <p class="author small--hide">
 												  FREE SHIPING VỚI ĐƠN HÀNG TRÊN 5.000.000Đ
 											   </p>
 											</div>
-											<a href="/collections/all" class="btnType2 btnSelectHairStyle  small--hide" target="_blank">Mua ngay</a>
 										 </div>
 									  </div>
 								   </div>
@@ -303,8 +304,7 @@
 					</div>
 					<div class="item">
 						<div class="slide-bg">
-						   <img src="images/img/home1.jpg" alt="Chào mừng bạn đến với Furniture">
-						   <!-- <img src="https://theme.hstatic.net/1000187230/1000241027/14/main_slider_1.png?v=2476" alt="Chào mừng bạn đến với Furniture"> -->
+						   <img src="images/img/home1.jpg" alt="ĐẾN VỚI NỘI THẤT <h2>FURNITURE SHOP</h2>">
 						</div>
 						<div class="slide-content-outside">
 						   <div class="wrapper">
@@ -312,15 +312,17 @@
 								 <div class="grid">
 									<div class="grid__item large--six-twelfths push--large--six-twelfths text-right">
 									   <div class="slide-content">
-										  <p class="desc small--hide">Chào mừng bạn đến với Furniture</p>
-										  <h2 class="title small--hide">
-											 NỘI THẤT FURNITURE
-										  </h2>
+										  <h3 class="desc small--hide">ĐẾN VỚI NỘI THẤT <strong class="strong-name">FURNITURE SHOP</strong></h3>
+										  <h3 class="title small--hide" style="margin-right: 150px;">
+											GIÁ CẢ CẠNH TRANH
+											 </h3>
+											<h3 class="title small--hide">
+											SĂN SALE CỰC THÍCH
+											</h3>
 										  <p class="author small--hide">
 											 FREE SHIPING VỚI ĐƠN HÀNG TRÊN 5.000.000Đ
 										  </p>
 									   </div>
-									   <a href="/collections/all" class="btnType2 btnSelectHairStyle  small--hide" target="_blank">Mua ngay</a>
 									</div>
 								 </div>
 							  </div>
@@ -329,8 +331,7 @@
 					</div>
 					<div class="item">
 						<div class="slide-bg">
-						   <img src="images/img/home2.jpg" alt="Chào mừng bạn đến với Furniture">
-						   <!-- <img src="https://theme.hstatic.net/1000187230/1000241027/14/main_slider_1.png?v=2476" alt="Chào mừng bạn đến với Furniture"> -->
+						   <img src="images/img/home2.jpg" alt="ĐẾN VỚI NỘI THẤT <h2>FURNITURE SHOP</h2>">
 						</div>
 						<div class="slide-content-outside">
 						   <div class="wrapper">
@@ -338,15 +339,17 @@
 								 <div class="grid">
 									<div class="grid__item large--six-twelfths push--large--six-twelfths text-right">
 									   <div class="slide-content">
-										  <p class="desc small--hide">Chào mừng bạn đến với Furniture</p>
-										  <h2 class="title small--hide">
-											 NỘI THẤT FURNITURE
-										  </h2>
+										<h3 class="desc small--hide">ĐẾN VỚI NỘI THẤT <strong class="strong-name">FURNITURE SHOP</strong></h3>
+										  <h3 class="title small--hide" style="margin-right: 150px;">
+											GIÁ CẢ CẠNH TRANH
+											 </h3>
+											<h3 class="title small--hide">
+											SĂN SALE CỰC THÍCH
+											</h3>
 										  <p class="author small--hide">
 											 FREE SHIPING VỚI ĐƠN HÀNG TRÊN 5.000.000Đ
 										  </p>
 									   </div>
-									   <a href="/collections/all" class="btnType2 btnSelectHairStyle  small--hide" target="_blank">Mua ngay</a>
 									</div>
 								 </div>
 							  </div>
