--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -15,7 +15,7 @@
           <div class="col-sm-4 middle-footer-image clearfix">
             <div class="image-shop">
               <a href="#" class="clearfix" style="display: block;">
-                <img src="/images/logo-fashion.jpg" alt="webfashion" class="img-shop-footer" style="width: 150px;">
+                <img src="/images/logo2.png" alt="webfashion" class="img-shop-footer" style="width: 150px;">
               </a>
             </div>
             <div class="icon-link">
