--- a/views/admin/product/editProduct.ejs
+++ b/views/admin/product/editProduct.ejs
@@ -124,7 +124,7 @@
             %>
             <div class="form-group" id="subImg">
                 <label>Product Image Detail <%-i%></label>
-                <img src="<%-item%>" class="img_detail" idImg="" id="subImg" width="160px" height="170px">
+                <img src="<%-item%>" class="img_detail" idImg="<%-i%>" id="subImg" width="160px" height="170px">
                 <a href="javascript:void(0)" id="del_image" type="button" class="btn btn-danger btn-circle icon_del"><i class="fa fa-times"></i></a>
                 <input type="text" value="<%-i%>" name="img<%-i%>" hidden class="img-hidden">
             </div>
