--- a/views/admin/product/addProduct.ejs
+++ b/views/admin/product/addProduct.ejs
@@ -26,7 +26,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label>Danh mục lớn</label>
+                <label>Danh mục cấp 1</label>
                 <select class="form-control par-cate" name="cate1" required>
                     <option value="">Please Choose Category</option>
                     <%data.forEach(item => {%>
@@ -39,7 +39,7 @@
             
       
             <div class="form-group">
-                <label>Danh mục nhỏ</label>
+                <label>Danh mục cấp 2</label>
                 <select class="form-control child-cate" name="cate2" required>
                     <option value="">Please Choose Child Category</option>      
                 </select>
@@ -68,14 +68,6 @@
                 <label>Miêu tả</label>
                 <textarea class="form-control ckeditor" rows="3" name="description" id="description" placeholder="Please Enter Product Description"></textarea>
             </div>
-            <div class="form-group">
-                <label>Nội dung</label>
-                <textarea class="form-control ckeditor" rows="3" name="content" id="content"></textarea>
-            </div>
-            <!-- <div class="form-group">
-                <label>Hình ảnh</label>
-                <input type="file" name="image_product" value="{!! old('image_product') !!}" required>
-            </div> -->
 
             <h5>File Upload & Image Preview</h5>
             <!-- Upload  -->
