--- a/views/auth/user/user-purchase.ejs
+++ b/views/auth/user/user-purchase.ejs
@@ -47,10 +47,11 @@
             </div>
             <div></div>
            <% if (data != '') {
-              var total = 0;
+              
             %>
                 <div>
-                    <%data.forEach(item => {%>
+                    <%data.forEach(item => {var total = 0;%>
+
                     <div class="_32cw_C">
                         <div>
                            <div class="_3wGW0m">
