--- a/views/admin/sales/sales.ejs
+++ b/views/admin/sales/sales.ejs
@@ -5,8 +5,28 @@
 <script src="/javascripts/assets/bootstrap-datetimepicker.js"></script>
 <script src="/javascripts/assets/bootstrap-datetimepicker.min.js"></script>
 <link rel="stylesheet" href="/stylesheets/css/report.css">
+<link rel="stylesheet" href="/stylesheets/css/sales_bootstrap.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
-    
+    <%
+      function getDate(tt) {
+        var date = new Date(tt);
+        var MyDate = new Date(date);
+        var MyDateString;
+      
+        MyDate.setDate(MyDate.getDate());
+        var hour = MyDate.getHours();
+        var minutes = MyDate.getMinutes();
+        var end = 'AM';
+        if (hour > 11) {
+          end = 'PM';
+          hour -= 12;
+        }
+      
+        MyDateString = ('0' + MyDate.getDate()).slice(-2) + '/' + ('0' + (MyDate.getMonth()+1)).slice(-2) + '/' + MyDate.getFullYear() + ' '+ hour + ':' + minutes + ' ' + end;
+      
+        return MyDateString;
+      }
+    %>
     <div class="list-category">
         <a href="/seller">Trang chủ</a> > Khuyến mãi
     </div>
@@ -20,25 +40,46 @@
         <table id="dataTables-example" class="mdl-data-table" style="width:100%">
             <thead>
                 <tr align="center">
-                    <th>STT</th>
-                    <th>Voucher ID</th>
-                    <th>Ngày bắt đầu</th>
-                    <th>Ngày kết thúc</th>
-                    <th>Danh mục</th>
+                    <th style="padding: 8px 5px;">STT</th>
+                    <th style="padding: 8px 0;">Mã voucher</th>
+                    <th>Tên chương trình KM</th>
+                    <th>
+                      Thời gian diễn ra
+                      
+                    </th>
+                   
+                    <th>Danh mục áp dụng</th>
                     <th>Discount</th>
                     <th>Tình trạng</th>
                     <th>Thao tác</th>
                 </tr>
             </thead>
             <tbody>
+            <% if (voucher) {
+              var i = 0;
+              voucher.forEach(item => {i++;
+            %>
               <tr>
-                <td>1</td>
-                <td>#3</td>
-                <td>6/21/2021 10:17 AM</td>
-                <td>6/28/2021 10:17 AM</td>
-                <td>Sofa giường</td>
-                <td>15%</td>
-                <td><p>Đang diễn ra</p></td>
+                <td><%-i%></td>
+                <td><%-item.code%></td>
+                <td>
+                  <div class="name-wrap-text">
+                    <p style="margin: 0;"><%-item.name%></p>
+                  </div>
+                </td>
+                <td>
+                  <div>
+                    <%-getDate(item.timestart)%> 
+                  </div>
+                  <span>-</span>
+                  <div>
+                    <%-getDate(item.timeend)%>
+                  </div>
+                </td>
+                
+                <td><%-item.catename%></td>
+                <td><%-item.discount%>%</td>
+                <td><p style="margin: 0;">Đang diễn ra</p></td>
                 <td>
                   <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -46,55 +87,13 @@
                       <span class="caret"></span>
                     </button>
                    <ul class="dropdown-menu action-product" aria-labelledby="dropdownMenu1">
-                      <li><a href="/seller/order/detail">Chỉnh sửa</a></li>
+                      <li><a href="/seller/sales/<%-item.name%>.<%-item.voucher_id%>">Chỉnh sửa</a></li>
                       <li><a href="/seller/order/detail/">Xóa</a></li>
                     </ul>
                 </div>
                 </td>
               </tr>
-              <tr>
-                <td>2</td>
-                <td>#1</td>
-                <td>6/9/2021 4:45 PM</td>
-                <td>6/20/2021 4:45 PM</td>
-                <td>Giường đơn</td>
-                <td>10%</td>
-                <td><p>Đã kết thúc</p></td>
-                <td>
-                  <div class="dropdown">
-                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                      Tùy chọn
-                      <span class="caret"></span>
-                    </button>
-                   <ul class="dropdown-menu action-product" aria-labelledby="dropdownMenu1">
-                      <li><a href="/seller/order/detail">Chỉnh sửa</a></li>
-                      <li><a href="/seller/order/detail/">Xóa</a></li>
-                    </ul>
-                </div>
-                </td>
-              </tr>
-              
-              <tr>
-                <td>3</td>
-                <td>#2</td>
-                <td>6/9/2021 4:48 PM</td>
-                <td>6/7/2021 9:48 PM</td>
-                <td>Giường đơn</td>
-                <td>20%</td>
-                <td><p>Đã kết thúc</p></td>
-                <td>
-                  <div class="dropdown">
-                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                      Tùy chọn
-                      <span class="caret"></span>
-                    </button>
-                   <ul class="dropdown-menu action-product" aria-labelledby="dropdownMenu1">
-                      <li><a href="/seller/order/detail">Chỉnh sửa</a></li>
-                      <li><a href="/seller/order/detail/">Xóa</a></li>
-                    </ul>
-                </div>
-                </td>
-              </tr>
+            <%})}%>
             </tbody>
         </table>
     </div>
@@ -111,6 +110,10 @@
         </div>
        <form action="" method="POST">
         <div class="modal-body">
+          <div class="form-group" style="margin-left: 10px;">
+            <label for="">Tên chương trình khuyến mãi</label>
+            <input type="text" class="form-control" name="name" required style="margin-left: 16px; width: 90%"> 
+          </div>
             <div class="pick-date clearfix">
                 <label for="">Thời gian diễn ra khuyến mãi: </label>
                <div class="col-sm-12">
@@ -158,7 +161,7 @@
             <div class="pick-category">
                 <label for="">Áp dụng cho danh mục:</label>
                 <select name="category" id="" class="form-control">
-                <% if (data) {
+                <% if (data.length > 0) {
                     data.forEach(item => { %>
               
                    <option value="<%-item.id%>"><%-item.name%></option>
@@ -175,7 +178,7 @@
             <div class="pick-discount">
               <label for="">Mã CODE</label>
               <input type="text" class="form-control" name="code" required>
-          </div>
+            </div>
            </div>
            <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -186,382 +189,4 @@
       </div>
     </div>
   </div>
-
-<style>
-    /*!
- * Datetimepicker for Bootstrap 3
- * version : 4.17.47
- * https://github.com/Eonasdan/bootstrap-datetimepicker/
- */
-.bootstrap-datetimepicker-widget {
-  list-style: none;
-}
-.bootstrap-datetimepicker-widget.dropdown-menu {
-  display: block;
-  margin: 2px 0;
-  padding: 4px;
-  width: 19em;
-}
-@media (min-width: 768px) {
-  .bootstrap-datetimepicker-widget.dropdown-menu.timepicker-sbs {
-    width: 38em;
-  }
-}
-@media (min-width: 992px) {
-  .bootstrap-datetimepicker-widget.dropdown-menu.timepicker-sbs {
-    width: 38em;
-  }
-}
-@media (min-width: 1200px) {
-  .bootstrap-datetimepicker-widget.dropdown-menu.timepicker-sbs {
-    width: 38em;
-  }
-}
-.bootstrap-datetimepicker-widget.dropdown-menu:before,
-.bootstrap-datetimepicker-widget.dropdown-menu:after {
-  content: '';
-  display: inline-block;
-  position: absolute;
-}
-.bootstrap-datetimepicker-widget.dropdown-menu.bottom:before {
-  border-left: 7px solid transparent;
-  border-right: 7px solid transparent;
-  border-bottom: 7px solid #ccc;
-  border-bottom-color: rgba(0, 0, 0, 0.2);
-  top: -7px;
-  left: 7px;
-}
-.bootstrap-datetimepicker-widget.dropdown-menu.bottom:after {
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
-  border-bottom: 6px solid white;
-  top: -6px;
-  left: 8px;
-}
-.bootstrap-datetimepicker-widget.dropdown-menu.top:before {
-  border-left: 7px solid transparent;
-  border-right: 7px solid transparent;
-  border-top: 7px solid #ccc;
-  border-top-color: rgba(0, 0, 0, 0.2);
-  bottom: -7px;
-  left: 6px;
-}
-.bootstrap-datetimepicker-widget.dropdown-menu.top:after {
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
-  border-top: 6px solid white;
-  bottom: -6px;
-  left: 7px;
-}
-.bootstrap-datetimepicker-widget.dropdown-menu.pull-right:before {
-  left: auto;
-  right: 6px;
-}
-.bootstrap-datetimepicker-widget.dropdown-menu.pull-right:after {
-  left: auto;
-  right: 7px;
-}
-.bootstrap-datetimepicker-widget .list-unstyled {
-  margin: 0;
-}
-.bootstrap-datetimepicker-widget a[data-action] {
-  padding: 6px 0;
-}
-.bootstrap-datetimepicker-widget a[data-action]:active {
-  box-shadow: none;
-}
-.bootstrap-datetimepicker-widget .timepicker-hour,
-.bootstrap-datetimepicker-widget .timepicker-minute,
-.bootstrap-datetimepicker-widget .timepicker-second {
-  width: 54px;
-  font-weight: bold;
-  font-size: 1.2em;
-  margin: 0;
-}
-.bootstrap-datetimepicker-widget button[data-action] {
-  padding: 6px;
-}
-.bootstrap-datetimepicker-widget .btn[data-action="incrementHours"]::after {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
-  content: "Increment Hours";
-}
-.bootstrap-datetimepicker-widget .btn[data-action="incrementMinutes"]::after {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
-  content: "Increment Minutes";
-}
-.bootstrap-datetimepicker-widget .btn[data-action="decrementHours"]::after {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
-  content: "Decrement Hours";
-}
-.bootstrap-datetimepicker-widget .btn[data-action="decrementMinutes"]::after {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
-  content: "Decrement Minutes";
-}
-.bootstrap-datetimepicker-widget .btn[data-action="showHours"]::after {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
-  content: "Show Hours";
-}
-.bootstrap-datetimepicker-widget .btn[data-action="showMinutes"]::after {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
-  content: "Show Minutes";
-}
-.bootstrap-datetimepicker-widget .btn[data-action="togglePeriod"]::after {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
-  content: "Toggle AM/PM";
-}
-.bootstrap-datetimepicker-widget .btn[data-action="clear"]::after {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
-  content: "Clear the picker";
-}
-.bootstrap-datetimepicker-widget .btn[data-action="today"]::after {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
-  content: "Set the date to today";
-}
-.bootstrap-datetimepicker-widget .picker-switch {
-  text-align: center;
-}
-.bootstrap-datetimepicker-widget .picker-switch::after {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
-  content: "Toggle Date and Time Screens";
-}
-.bootstrap-datetimepicker-widget .picker-switch td {
-  padding: 0;
-  margin: 0;
-  height: auto;
-  width: auto;
-  line-height: inherit;
-}
-.bootstrap-datetimepicker-widget .picker-switch td span {
-  line-height: 2.5;
-  height: 2.5em;
-  width: 100%;
-}
-.bootstrap-datetimepicker-widget table {
-  width: 100%;
-  margin: 0;
-}
-.bootstrap-datetimepicker-widget table td,
-.bootstrap-datetimepicker-widget table th {
-  text-align: center;
-  border-radius: 4px;
-}
-.bootstrap-datetimepicker-widget table th {
-  height: 20px;
-  line-height: 20px;
-  width: 20px;
-}
-.bootstrap-datetimepicker-widget table th.picker-switch {
-  width: 145px;
-}
-.bootstrap-datetimepicker-widget table th.disabled,
-.bootstrap-datetimepicker-widget table th.disabled:hover {
-  background: none;
-  color: #777777;
-  cursor: not-allowed;
-}
-.bootstrap-datetimepicker-widget table th.prev::after {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
-  content: "Previous Month";
-}
-.bootstrap-datetimepicker-widget table th.next::after {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
-  content: "Next Month";
-}
-.bootstrap-datetimepicker-widget table thead tr:first-child th {
-  cursor: pointer;
-}
-.bootstrap-datetimepicker-widget table thead tr:first-child th:hover {
-  background: #eeeeee;
-}
-.bootstrap-datetimepicker-widget table td {
-  height: 54px;
-  line-height: 54px;
-  width: 54px;
-}
-.bootstrap-datetimepicker-widget table td.cw {
-  font-size: .8em;
-  height: 20px;
-  line-height: 20px;
-  color: #777777;
-}
-.bootstrap-datetimepicker-widget table td.day {
-  height: 20px;
-  line-height: 20px;
-  width: 20px;
-}
-.bootstrap-datetimepicker-widget table td.day:hover,
-.bootstrap-datetimepicker-widget table td.hour:hover,
-.bootstrap-datetimepicker-widget table td.minute:hover,
-.bootstrap-datetimepicker-widget table td.second:hover {
-  background: #eeeeee;
-  cursor: pointer;
-}
-.bootstrap-datetimepicker-widget table td.old,
-.bootstrap-datetimepicker-widget table td.new {
-  color: #777777;
-}
-.bootstrap-datetimepicker-widget table td.today {
-  position: relative;
-}
-.bootstrap-datetimepicker-widget table td.today:before {
-  content: '';
-  display: inline-block;
-  border: solid transparent;
-  border-width: 0 0 7px 7px;
-  border-bottom-color: #337ab7;
-  border-top-color: rgba(0, 0, 0, 0.2);
-  position: absolute;
-  bottom: 4px;
-  right: 4px;
-}
-.bootstrap-datetimepicker-widget table td.active,
-.bootstrap-datetimepicker-widget table td.active:hover {
-  background-color: #337ab7;
-  color: #fff;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-}
-.bootstrap-datetimepicker-widget table td.active.today:before {
-  border-bottom-color: #fff;
-}
-.bootstrap-datetimepicker-widget table td.disabled,
-.bootstrap-datetimepicker-widget table td.disabled:hover {
-  background: none;
-  color: #777777;
-  cursor: not-allowed;
-}
-.bootstrap-datetimepicker-widget table td span {
-  display: inline-block;
-  width: 54px;
-  height: 54px;
-  line-height: 54px;
-  margin: 2px 1.5px;
-  cursor: pointer;
-  border-radius: 4px;
-}
-.bootstrap-datetimepicker-widget table td span:hover {
-  background: #eeeeee;
-}
-.bootstrap-datetimepicker-widget table td span.active {
-  background-color: #337ab7;
-  color: #fff;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-}
-.bootstrap-datetimepicker-widget table td span.old {
-  color: #777777;
-}
-.bootstrap-datetimepicker-widget table td span.disabled,
-.bootstrap-datetimepicker-widget table td span.disabled:hover {
-  background: none;
-  color: #777777;
-  cursor: not-allowed;
-}
-.bootstrap-datetimepicker-widget.usetwentyfour td.hour {
-  height: 27px;
-  line-height: 27px;
-}
-.bootstrap-datetimepicker-widget.wider {
-  width: 21em;
-}
-.bootstrap-datetimepicker-widget .datepicker-decades .decade {
-  line-height: 1.8em !important;
-}
-.input-group.date .input-group-addon {
-  cursor: pointer;
-}
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
-}
-
-</style>
 <% include ../../partials/footer_admin %>
